--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sofia Choi</title>
 </head>
+
 <body>
-    <p>Hello World</p>
+    <h1>Sofia Choi Sandbox Site</h1>
+    <hr>
+    <h2>Design 372 Spring Quarter 2025</h2>
+    <nav>
+        <ul>
+            <li><a href="project02.html">Project 1</a>
+                <ul>
+                    <li><a href="project01process.html">Project 1 Process</a></li>
+                </ul>
+            </li>
+            <li><a href="project02.html">Project 2</a>
+                <ul>
+                    <li><a href="project02process.html">Project 2 Process</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <article>
+        <img src="https://live.staticflickr.com/65535/54437776455_3c4f238a16_o.jpg" width="500px">
+        <h2>About Me</h2>
+        <p> Hello!
+            <br>
+            My name is Sofia Choi, I am a third-year design student at Western Washington University. I am a passionate
+            learner, I love to experiment and try new things in both design and in my hobbies.
+            I am primarily interested in typography, printed materials, and web design.
+            <br>
+            I spend a lot of my time finding new websites to explore. I am interested in the concept of a handmade web
+            and websites as architecture. Websites are spaces we occupy, their structure dictates the ways we interact
+            with their infrastructure and conduct ourselves within them. Their architecture should be constructed with
+            users in mind. The internet is alive, it has been built and sustained on the love, labor, and curiosity of
+            millions. I dream of an internet belonging to the people–beautiful, intimate, and human-centered. I hope my
+            work can contribute to the creation of this world and proliferation of information to the public.
+        </p>
+    </article>
+    <footer>
+        <p><a href="mailto:sofiakchoi@gmail.com">Email Me</a></p>
+        <p>Sofia Choi 2025 &copy;</p>
+    </footer>
 </body>
+
 </html>
