--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <article>
-        <img src="https://live.staticflickr.com/65535/54437776455_3c4f238a16_o.jpg" width="500px">
+        <img src="https://i.pinimg.com/736x/58/14/3a/58143a33817d4d87f6fa1de049129b4a.jpg" width="500px">
         <h2>About Me</h2>
         <p> Hello!
             <br>
