--- a/index.html
+++ b/index.html
@@ -8,47 +8,56 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Sofia Choi Sandbox Site</h1>
     <hr>
-    <h2>Design 372 Spring Quarter 2025</h2>
-    <nav>
-        <ul>
-            <li><a href="project02.html">Project 1</a>
-                <ul>
-                    <li><a href="project01process.html">Project 1 Process</a></li>
-                </ul>
-            </li>
-            <li><a href="project02.html">Project 2</a>
-                <ul>
-                    <li><a href="project02process.html">Project 2 Process</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    <article>
-        <img src="https://i.pinimg.com/736x/58/14/3a/58143a33817d4d87f6fa1de049129b4a.jpg" width="500px">
-        <h2>About Me</h2>
-        <p> Hello!
-            <br>
-            My name is Sofia Choi, I am a third-year design student at Western Washington University. I am a passionate
-            learner, I love to experiment and try new things in both design and in my hobbies.
-            I am primarily interested in typography, printed materials, and web design.
-            <br>
-            I spend a lot of my time finding new websites to explore. I am interested in the concept of a handmade web
-            and websites as architecture. Websites are spaces we occupy, their structure dictates the ways we interact
-            with their infrastructure and conduct ourselves within them. Their architecture should be constructed with
-            users in mind. The internet is alive, it has been built and sustained on the love, labor, and curiosity of
-            millions. I dream of an internet belonging to the people–beautiful, intimate, and human-centered. I hope my
-            work can contribute to the creation of this world and proliferation of information to the public.
-        </p>
+    <div class="heading">
+        <h1>Sofia Choi Sandbox Site</h1>
+        <nav>
+            <ul>
+                <li><a href="project02.html">Project 1</a></li>
+                <li><a href="project01process.html">Project 1 Process</a></li>
+                <li><a href="project02.html">Project 2</a></li>
+                <li><a href="project02process.html">Project 2 Process</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr>
+    <article ID="box">
+        <div ID="left">
+            <h2>Hello!</h2>
+            <hr>
+            <p>
+                My name is Sofia, I am a third-year design student at Western Washington University. I am a
+                passionate
+                learner, I love to experiment and try new things in both design and in my hobbies.
+                I am primarily interested in typography, printed materials, and web design.
+                <br>
+                I spend a lot of my time finding new websites to explore. I am interested in the concept of a handmade
+                web
+                and websites as architecture. Websites are spaces we occupy, their structure dictates the ways we
+                interact
+                with their infrastructure and conduct ourselves within them. Their architecture should be constructed
+                with
+                users in mind. The internet is alive, it has been built and sustained on the love, labor, and curiosity
+                of
+                millions. I dream of an internet belonging to the people–beautiful, intimate, and human-centered. I hope
+                my
+                work can contribute to the creation of this world and proliferation of information to the public.
+            </p>
+            <hr>
+            <h2>Design 372 Spring Quarter 2025</h2>
+        </div>
+        <div ID="right">
+            <!-- image is placed here in CSS -->
+        </div>
     </article>
     <footer>
-        <p><a href="mailto:sofiakchoi@gmail.com">Email Me</a></p>
-        <p>Sofia Choi 2025 &copy;</p>
+        <p>Sofia Choi 2025 &copy; <a href="mailto:sofiakchoi@gmail.com">Email</a></p>
     </footer>
 </body>
 
