--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1>Sofia Choi Sandbox Site</h1>
         <nav>
             <ul>
-                <li><a href="project02.html">Project 1</a></li>
-                <li><a href="project01process.html">Project 1 Process</a></li>
+                <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">Project 1 Mobile</a></li>
+                <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">Project 1 Mobile</a></li>
                 <li><a href="project02.html">Project 2</a></li>
                 <li><a href="project02process.html">Project 2 Process</a></li>
             </ul>
