--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         <h1>Sofia Choi Sandbox Site</h1>
         <nav>
             <ul>
-                <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">Project 1 Mobile</a></li>
-                <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">Project 1 Web</a></li>
-                <li><a href="CASESTUDY.pdf">Project 1 Casestudy</a></li>
-                <li><a href="project02.html">Project 2</a></li>
-                <li><a href="project02process.html">Project 2 Process</a></li>
+                <li><a
+                        href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">P.1
+                        Mobile</a></li>
+                <li><a
+                        href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">P.1
+                        Web</a></li>
+                <li><a href="CASESTUDY.pdf">P.1 Casestudy</a></li>
+                <li><a href="project02.html">P.2</a></li>
+                <li><a href="project02process.html">P.2 Process</a></li>
             </ul>
         </nav>
     </div>
@@ -57,6 +61,23 @@
             <!-- image is placed here in CSS -->
         </div>
     </article>
+    <div id="cool">
+        <div class="flower">
+            <img src="HAPPY.png" alt="happy flower picture">
+        </div>
+        <div class="sun">
+            <img src="SUN.png" alt="happy sun picture">
+        </div>
+    </div>
+    <div id="websites">
+        <h2>Websites I like</h2>
+        <ul class="list">
+            <li><a href="https://thehtml.review/04/">HTML Review</a></li>
+            <li><a href="https://brutalistwebsites.com/">Brutalist Websites</a></li>
+            <li><a href="https://www.hoverstat.es/">Hoverstat.es</a></li>
+            <li><a href="https://thediagram.com/24_4/">Diagram</a></li>
+        </ul>
+    </div>
     <footer>
         <p>Sofia Choi 2025 &copy; <a href="mailto:sofiakchoi@gmail.com">Email</a></p>
     </footer>
