--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 <body>
     <hr>
     <div class="heading">
-        <h1>Sofia Choi Sandbox Site</h1>
+        <h1 id="logo">Sofia Choi Sandbox Site</h1>
+        <div id="dropdown">
+            <ul>
+                <li><a href="#">Project 01</a>
+                    <ul>
+                        <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">Web Prototype</a></li>
+                        <li><a href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">Mobile Prototype</a></li>
+                        <li><a href="CASESTUDY.pdf">Casestudy</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Project 02</a>
+                    <ul>
+                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Casestudy</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         <nav>
             <ul>
                 <li><a
