--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 
 <body>
     <div id="topbar">
-    <hr>
-    <div class="row">
-        <h5 class="one-half column">Sofia Choi Sandbox Site</h5>
-        <nav class="one-half column">
-            <ul>
-                <li><a
-                        href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">P.1
-                        Mobile</a></li>
-                <li><a
-                        href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">P.1
-                        Web</a></li>
-                <li><a href="CASESTUDY.pdf">P.1 Casestudy</a></li>
-                <li><a href="project02.html">P.2</a></li>
-                <li><a href="project02process.html">P.2 Process</a></li>
-            </ul>
-        </nav>
+        <hr>
+        <div class="row">
+            <h5 class="one-half column">Sofia Choi Sandbox Site</h5>
+            <nav class="one-half column">
+                <ul>
+                    <li><a
+                            href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=134-835&t=vuWa4Gh3bsFhjlXF-1&scaling=scale-down&content-scaling=fixed&page-id=82%3A797&starting-point-node-id=134%3A835">P.1
+                            Mobile</a></li>
+                    <li><a
+                            href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">P.1
+                            Web</a></li>
+                    <li><a href="CASESTUDY.pdf">P.1 Casestudy</a></li>
+                    <li><a href="project02.html">P.2</a></li>
+                    <li><a href="project02process.html">P.2 Process</a></li>
+                </ul>
+            </nav>
+        </div>
+        <hr>
     </div>
-    <hr>
-</div>
     <div class="box">
         <div class="row">
             <div class="one-half column">
@@ -73,7 +73,7 @@
             </div>
             <div class="one-half column">
                 <div id="image">
-                 <img src="https://live.staticflickr.com/65535/54384643982_ae40979d72_o.gif" alt="">
+                    <img src="https://live.staticflickr.com/65535/54384643982_ae40979d72_o.gif" alt="">
                 </div>
             </div>
         </div>
@@ -99,6 +99,16 @@
             </div>
         </div>
     </div>
+    <a href="https://www.poetryfoundation.org/poems/49602/elms-56d22bda55f98">
+        <div id="button">
+            <div id="click">CLICK to discover! <br>CLICK to see the future!<br>CLICK to be loved!<br>CLICK to be
+                understood!
+            </div>
+            <div id="click">CLICK to discover! <br>CLICK to see the future!<br>CLICK to be loved!<br>CLICK to be
+                understood!
+            </div>
+        </div>
+    </a>
 </body>
 
 </html>
