--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                             href="https://www.figma.com/proto/fZNofDMO9w3KeT2m0WYhX5/Project01-DSGN372?node-id=113-146&p=f&t=JsidyTPHvHMQp3su-1&scaling=scale-down&content-scaling=fixed&page-id=35%3A24&starting-point-node-id=113%3A146&show-proto-sidebar=1">P.1
                             Web</a></li>
                     <li><a href="CASESTUDY.pdf">P.1 Casestudy</a></li>
-                    <li><a href="project02.html">P.2</a></li>
-                    <li><a href="project02process.html">P.2 Process</a></li>
+                    <li><a href="https://sofiakchoi.github.io/gentlecomputation/">P.2</a></li>
+                    <li><a href="https://www.figma.com/proto/gTKTkZPRCHqtTkQpCj2teh/Project02-Design372?node-id=21-259&t=VRRRwteJQm6TARRn-1&scaling=scale-down&content-scaling=fixed&page-id=1%3A5&starting-point-node-id=21%3A259">P.2 Prototype</a></li>
+                    <li><a href="casestudy 2.pdf">P.2 Process</a></li>
                 </ul>
             </nav>
         </div>
